@startuml
title Class Diagram - Use Case: Khám phá và tìm kiếm sản phẩm
skinparam classAttributeIconSize 0

class ProductController {
  + listProducts(filter: ProductFilterRequest): String
  + search(keyword: String, page: int): String
}

class ProductFilterRequest {
  - keyword: String
  - categoryId: Long
  - brandId: Long
  - materialId: Long
  - minPrice: BigDecimal
  - maxPrice: BigDecimal
  - gender: Gender
  - page: int
  - size: int
}

interface ProductService {
  + getFilteredProducts(filter: ProductFilterRequest): Page<ProductCardResponse>
  + getHomeData(): HomeDataResponse
}

class ProductServiceImpl {
  - productRepository: ProductRepository
  - categoryRepository: CategoryRepository
  - bannerRepository: BannerRepository
}

class ProductSpecification {
  + {static} filterProducts(filter: ProductFilterRequest): Specification<Product>
}

interface ProductRepository {
  + findAll(spec: Specification<Product>, pageable: Pageable): Page<Product>
}

class Product {
  - id: Long
  - name: String
  - description: String
  - basePrice: BigDecimal
  - gender: Gender
  - isActive: boolean
  - isBestSeller: boolean
  - isNew: boolean
}

ProductController ..> ProductFilterRequest : uses
ProductController --> ProductService : uses
ProductServiceImpl ..> ProductSpecification : uses
ProductServiceImpl --> ProductRepository : uses
ProductRepository ..> Product : manages

@enduml